implement ajax or fetching api for random images

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,15 +4,61 @@
 
 header {
   background-color: skyblue;
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  height: 3.5rem;
   padding-inline: 2rem;
   font-weight: bold;
 }
 
+@media (min-width: 375px) {
+  header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap; 
+  }
+}
+
 nav {
   display: flex;
-  gap: 2rem;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+@media (min-width: 768px) {
+  nav {
+    gap: 2rem;
+  }
+}
+
+.container {
+  width: 100vw;
+  border: 1px solid black;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+button {
+  color: white;
+  background-color: #3de63d;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  margin: 5rem auto;
+}
+
+.image-gallery {
+  display: flex;
+  flex-wrap: wrap; /* Allows images to wrap to the next line */
+  gap: 10px; /* Space between images */
+  justify-content: center; /* Center the images horizontally */
+}
+
+.image-gallery img {
+  max-width: 100%; /* Ensure images don't exceed the container's width */
+  height: auto;
+  flex: 1 1 calc(25% - 20px); /* Responsive layout: adjust as needed */
+  margin-bottom: 10px; /* Space at the bottom of each image */
 }
