--- a/app/globals.css
+++ b/app/globals.css
@@ -3,62 +3,68 @@
 @tailwind utilities;
 
 header {
-  background-color: skyblue;
-  height: 3.5rem;
-  padding-inline: 2rem;
-  font-weight: bold;
+	background-color: skyblue;
+	padding: 1rem;
+	font-weight: bold;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 @media (min-width: 375px) {
-  header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap; 
-  }
+	header {
+		padding: 2rem;
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
 }
 
 nav {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	gap: 1rem;
 }
 @media (min-width: 768px) {
-  nav {
-    gap: 2rem;
-  }
+	nav {
+		gap: 2rem;
+	}
 }
 
 .container {
-  width: 100vw;
-  border: 1px solid black;
-  padding: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+	width: 100vw;
+	padding: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 
 button {
-  color: white;
-  background-color: #3de63d;
-  padding: 0.5rem 1rem;
-  border-radius: 0.5rem;
-  margin: 5rem auto;
+	color: white;
+	background-color: #3de63d;
+	padding: 0.5rem 1rem;
+	border-radius: 0.5rem;
+	margin: 5rem auto;
 }
 
 .image-gallery {
-  display: flex;
-  flex-wrap: wrap; /* Allows images to wrap to the next line */
-  gap: 10px; /* Space between images */
-  justify-content: center; /* Center the images horizontally */
+	display: flex;
+	flex-wrap: wrap;
+	gap: 10px;
+	justify-content: center;
 }
 
 .image-gallery img {
-  max-width: 100%; /* Ensure images don't exceed the container's width */
-  height: auto;
-  flex: 1 1 calc(25% - 20px); /* Responsive layout: adjust as needed */
-  margin-bottom: 10px; /* Space at the bottom of each image */
+	max-width: 100%;
+	height: auto;
+	flex: 1 1 calc(25% - 20px);
+	margin-bottom: 10px;
+}
+
+img {
+	border-radius: 1rem;
 }
